fix: wrap all classes with home

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,77 +1,79 @@
 @import "../../App.scss";
 
 .container {
-    margin-left: $mb-1-5;
-    margin-right: $mb-1-5;
+  margin-left: $mb-1-5;
+  margin-right: $mb-1-5;
 }
 
-.content {
-  grid-template-columns: 116px repeat(2, 1fr);
-  padding-top: 5.5rem;
-  column-gap: 2rem;
-  align-items: center;
-  background-color: $body-color;
+.home {
+  .content {
+    grid-template-columns: 116px repeat(2, 1fr);
+    padding-top: 5.5rem;
+    column-gap: 2rem;
+    align-items: center;
+    background-color: $body-color;
 
-  .social {
-    display: grid;
-    grid-template-columns: max-content;
-    row-gap: 1rem;
+    .social {
+      display: grid;
+      grid-template-columns: max-content;
+      row-gap: 1rem;
 
-    .social-icon {
-      font-size: 1.25rem;
-      color: $title-color;
+      .social-icon {
+        font-size: 1.25rem;
+        color: $title-color;
+      }
+
+      .social-icon:hover {
+        color: $title-color-dark;
+      }
     }
 
-    .social-icon:hover {
-      color: $title-color-dark;
+    .img {
+      background: url(../../assets/profileimg.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      box-shadow: inset 0 0 0 9px rgb(255 255 255/0.3);
+      order: 1;
+      justify-self: center;
+      width: 300px;
+      height: 300px;
+      animation: profile__animate 8s ease-in-out infinite 1s;
     }
-  }
 
-  .img {
-    background: url(../../assets/profileimg.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(255 255 255/0.3);
-    order: 1;
-    justify-self: center;
-    width: 300px;
-    height: 300px;
-    animation: profile__animate 8s ease-in-out infinite 1s;
-  }
-
-  .title {
-    font-size: $big-font-size;
-    margin-bottom: $mb-0-25;
-  }
-
-  // .hand {
-  //     width: 38px;
-  //     height: 38px;
-  //  ```margin-left: .4rem;
-  // }
-
-  .subtitle {
-    position: relative;
-    font-size: $h3-font-size;
-    padding-left: 5.4rem;
-    font-weight: $font-normal;
-    margin-bottom: $mb-1;
-
-    &::before {
-      content: "";
-      position: absolute;
-      width: 70px;
-      height: 1px;
-      background-color: $title-color;
-      left: 0;
-      top: 1rem;
+    .title {
+      font-size: $big-font-size;
+      margin-bottom: $mb-0-25;
     }
-  }
 
-  .description {
-    max-width: 400px;
-    margin-bottom: $mb-3;
+    // .hand {
+    //     width: 38px;
+    //     height: 38px;
+    //  ```margin-left: .4rem;
+    // }
+
+    .subtitle {
+      position: relative;
+      font-size: $h3-font-size;
+      padding-left: 5.4rem;
+      font-weight: $font-normal;
+      margin-bottom: $mb-1;
+
+      &::before {
+        content: "";
+        position: absolute;
+        width: 70px;
+        height: 1px;
+        background-color: $title-color;
+        left: 0;
+        top: 1rem;
+      }
+    }
+
+    .description {
+      max-width: 400px;
+      margin-bottom: $mb-3;
+    }
   }
 }
 
